# Chorus

./: .gitignore  CLAUDE.md  README.md  SESSION_CHECKPOINT.md
docs/: 代码链路.md  切片计划-基于AstrBot的MVP.md  (+9 more)
orchestrator/: .env.example  group_checkpoints.sqlite-shm  group_checkpoints.sqlite-wal  pyproject.toml
orchestrator/app/: __main__.py  budget.py  builtin_tools.py  config.py  context.py  execution_loop.py  execution_mcp.py  execution_opensandbox.py  execution_runtime.py  execution_sandbox.py  graph.py  llm.py  llm_astrbot.py  recipe_select.py  recipes.py  recipes_auto.py  recipes_compile.py  recipes_cond.py  recipes_roundtable.py  recipes_spec.py  recipes_validate.py  relay.py  run_ctx.py  runtime.py  server.py  service.py  state.py  structured.py
orchestrator/app/db/: engine.py  models.py  repo.py
orchestrator/app/nodes/: _common.py  clarify.py  curate.py  extract.py  fanout.py  frame.py  generate.py  human.py  llm_plan.py  loop_guard.py  plan.py  plan_stream.py  schedule.py  synthesize.py  tool_dispatch.py  turn.py
orchestrator/app/recipes/: __init__.py  auto.py  builtin.py  compile.py  cond.py  fanout.py  plan_recipe.py  roundtable.py  select.py  spec.py  validate.py
orchestrator/app/transport/: __init__.py  outbound_client.py  relay.py  runtime.py
orchestrator/tests/: test_auto.py  test_compile.py  test_cond.py  test_contacts.py  test_curate.py  test_db.py  test_durable.py  test_extract.py  test_fanout.py  test_human_gate.py  test_interrupt.py  test_llm.py  test_outbound_client.py  test_persistence.py  test_persona.py  test_recipe_crud.py  test_recipe_select.py  test_relay.py  test_reputation.py  test_roundtable.py  test_roundtable_event.py  test_roundtable_service.py  test_service_e2e.py  test_spec.py  test_stream.py  test_structured.py  test_synthesize_roundtable.py  test_turn.py  test_validate.py
orchestrator/tests/infra/: test_context.py  test_engine_migration.py  test_llm.py  test_llm_astrbot.py  test_persona.py  test_state_contract.py  test_structured.py
(+85 files in other folders)
