[project]
name = "ai-group-orchestrator"
version = "0.0.1"
description = "AI 群聊编排服务（LangGraph 大脑）—— 基于 AstrBot 适配层的 MVP。见 ../docs/技术方案-基于AstrBot的MVP实现.md"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2,<2",
    "langgraph-checkpoint-sqlite>=3.1,<4",
    "pydantic>=2.10,<3",
    "langchain-openai>=1.2,<2",
    "tenacity>=9,<10",
    "python-dotenv>=1,<2",
    "fastapi>=0.115,<1",
    "uvicorn>=0.30,<1",
    "aiosqlite>=0.20,<1",
    "sqlmodel>=0.0.21,<0.1",
]

[project.optional-dependencies]
# Real sandbox executor backend (S12b). Optional: the pip single-machine path
# (S6) and offline tests don't need it; install with `.[sandbox]` to use it.
sandbox = ["opensandbox>=0.1.9,<0.2"]

[dependency-groups]
dev = ["pytest>=9,<10", "pytest-asyncio>=1,<2"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
